--- a/debian/control.in
+++ b/debian/control.in
@@ -1,7 +1,8 @@
 Source: @GST_PKGNAME@
 Section: libs
 Priority: optional
-Maintainer: Maintainers of GStreamer packages <pkg-gstreamer-maintainers@lists.alioth.debian.org>
+Maintainer: BlankOn Developers <blankon-dev@googlegroups.com>
+XSBC-Original-Maintainer: Maintainers of GStreamer packages <pkg-gstreamer-maintainers@lists.alioth.debian.org>
 Uploaders: Loïc Minier <lool@debian.org>,
            Sebastien Bacher <seb128@debian.org>,
            Sebastian Dröge <slomo@debian.org>,
@@ -28,7 +29,7 @@ Build-Depends: debhelper (>= 9),
                gobject-introspection (>= 0.9.12-4~),
                gir1.2-glib-2.0,
                gir1.2-freedesktop,
-               libcap-dev [linux-any]
+               libcap-dev
 Build-Depends-Indep: gtk-doc-tools (>= 1.12),
                      libglib2.0-doc
 Standards-Version: 3.9.3
